syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.reactive.inventory.module.inventory.grpc.dto";
option java_outer_classname = "InventoryProto";

package inventory;

message ValidationError {
  string field = 1;
  string message = 2;
}
message ErrorResponse {
  string errorMsg = 1;
  repeated ValidationError errors = 2;
}

message InventoryResponse {
  int64 productId = 1;
  int32 quantity = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message GetByProductIdRequest {
  int64 productId = 1;
}

service InventoryService {
  rpc GetInventoryByProductId(GetByProductIdRequest) returns (InventoryResponse);
}